# repo-line-counter-tauri

./: .prettierrc  LICENSE  package-lock.json  package.json  vite.config.js
src/: App.jsx  ExportDataModal.jsx  FileBrowserModal.jsx  FileLinesTable.jsx  MenuBar.jsx  Modal.css  Modal.jsx  Title.css  Title.jsx  commands.js  dtoTypes.js  enums.js  main.jsx  styles.css
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: command.rs  dto.rs  filedata.rs  filesystem.rs  filewriter.rs  main.rs  model.rs  pathmatcher.rs  state.rs
src/components/: App.css  App.jsx  DirectoryInput.jsx  ExportDataModal.jsx  FileBrowserModal.css  FileBrowserModal.jsx  FileLinesTable.jsx  MenuBar.css  Modal.css  Modal.jsx  SummaryTable.jsx
